--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "react-18",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Zinaida-Razinkova.github.io/goit-markup-hw-01",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "gh-pages": "^3.1.0",
     "modern-normalize": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -15,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
