--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-18",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Zinaida-Razinkova.github.io/goit-markup-hw-01",
+  "homepage": "https://Zinaida-Razinkova.github.io/goit-react-hw-01-components",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
